--- a/ResidentManagement/web/home.html
+++ b/ResidentManagement/web/home.html
@@ -10,10 +10,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <title>Home Page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <link rel="stylesheet" href="css/main.css"/>
         <link rel="icon" href="images/star.png" type="image/x-icon"/>       
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <style>
+        <style>            
+            body {
+                font-family: 'Nunito', Arial;
+                font-size: 18px;
+                line-height: 1.3333;
+                color: #1E2F41;
+                height: 100%;
+            }
+            
             .hero {
                 height: 100vh;
                 background: linear-gradient(rgba(144, 7, 13), rgba(0, 0, 0, 0.5)), url('images/trong-dong.jpg');
